--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ actix = "0.13.1"
 actix-web = "4.4.0"
 actix-files = "0.6.2"
 actix-web-actors = "4.2.0"
+handlebars = { version = "4.4.0", features = ["dir_source"] }
+log = "0.4.20"
 env_logger = "0.10.0"
 tokio = { version = "1.32.0", features = ["full"] }
 futures-util = "0.3.28"
