--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,12 @@ actix = "0.13.1"
 actix-web = "4.4.0"
 actix-files = "0.6.2"
 actix-web-actors = "4.2.0"
-handlebars = { version = "4.4.0", features = ["dir_source"] }
-log = "0.4.20"
-env_logger = "0.10.0"
 tokio = { version = "1.32.0", features = ["full"] }
-futures-util = "0.3.28"
-rand = "0.8.5"
+env_logger = "0.10.0"
 anyhow = "1.0.75"
-# photic_macros = { path = "/Users/steen/Documents/GitHub/photic_macros" }
+handlebars = { version = "4.4.0", features = ["dir_source"] }
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
+log = "0.4.20"
+dotenv = "0.15.0"
 
-[dev-dependencies]
